add google site verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <link rel="icon" href="./src/assets/avatars/avatar.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="2oBqvfFMNhNr2aoZORWs01wzXzQ75TduyOO3O6eUVbk" />
+    <meta
+      name="description"
+      content="Web developer ready to make your dream site a reality. Send me ahout!"
+    />
+    <meta
+      name="keywords"
+      content="web developer, developer"
+    />
+    <meta name="author" content="Spencer Evans" />
     <title>Spencer Evans</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
