finish home section of redesign

--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
-    <link rel="icon" href="./src/assets/avatars/avatar.png" />
+    <link rel="icon" href="/assets/logo.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="2oBqvfFMNhNr2aoZORWs01wzXzQ75TduyOO3O6eUVbk" />
-    <meta
-      name="description"
-      content="Web developer ready to make your dream site a reality. Send me ahout!"
-    />
-    <meta
-      name="keywords"
-      content="web developer, developer"
-    />
+    <meta name="description" content="Web developer ready to make your dream site a reality. Send me ahout!" />
+    <meta name="keywords" content="web developer, developer" />
     <meta name="author" content="Spencer Evans" />
     <title>Spencer Evans</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-      href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=VT323&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Workbench:SCAN@-11&display=swap"
-      rel="stylesheet"
-    />
+      href="https://fonts.googleapis.com/css2?family=Anton+SC&family=Inter:wght@100..900&family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap"
+      rel="stylesheet">
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+
 </html>
