--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-      href="https://fonts.googleapis.com/css2?family=Anton+SC&family=Inter:wght@100..900&family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Playwrite+AT:ital,wght@0,100..400;1,100..400&family=Rock+Salt&display=swap"
       rel="stylesheet">
   </head>
 
