change description in meta tags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="2oBqvfFMNhNr2aoZORWs01wzXzQ75TduyOO3O6eUVbk" />
-    <meta name="description" content="Web developer ready to make your dream site a reality. Send me ahout!" />
+    <meta name="description" content="Fullstack web developer. Websites done to your standard." />
     <meta name="keywords" content="web developer, developer" />
     <meta name="author" content="Spencer Evans" />
     <title>Spencer Evans</title>
